updated layer generation. Accepted root facets